Add Ant Complite

--- a/BreezingHealth/project.properties
+++ b/BreezingHealth/project.properties
@@ -12,4 +12,15 @@
 
 # Project target.
 target=android-17
-android.library=true
+
+android.library.reference.1=../NumberPicker
+android.library.reference.2=../SlidingMenu
+android.library.reference.3=../UITableView
+android.library.reference.4=../ViewPagerIndicator
+android.library.reference.5=../AFreeChart
+android.library.reference.6=../ListViewAnimations
+
+key.store=breezing.keystore
+key.alias=breezing
+key.store.password=android
+key.alias.password=android
