--- a/BreezingHealth/AndroidManifest.xml
+++ b/BreezingHealth/AndroidManifest.xml
@@ -142,6 +142,15 @@
         </activity>
         
         <activity
+            android:name=".ui.activity.CaloricBurnHistoryActivity"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="action.intent.breezing.health.ACTIVITY_BURN_HISTORY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        
+        <activity
             android:name=".ui.activity.ShareActivity"
             android:screenOrientation="portrait" >
             <intent-filter>
