add xhdpi support

--- a/BreezingHealth/AndroidManifest.xml
+++ b/BreezingHealth/AndroidManifest.xml
@@ -278,5 +278,10 @@
         </receiver>
         
     </application>
+    
+    <supports-screens android:xlargeScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:anyDensity="true" />
 
 </manifest>
